--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root{
     --text-color: #dbe4ef;
-    --card-front-color: #144480;
-    --card-back-color: #00f4bf;
+    --card-front-color: #8c3c9c;
+    --card-back-color: #f400bb;
 }
 
 body {
