--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root{
     --text-color: #dbe4ef;
     --card-front-color: #8c3c9c;
-    --card-back-color: #f400bb;
+    --card-back-color: #7a1a64;
 }
 
 body {
